# ChatGPT-on-WeChat

./: .env.example  Dockerfile  LICENSE  README.md  config.yaml.example  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish-docker-hub.yml
src/: chatgpt.ts  config.ts  interface.ts  main.ts
