[tool.poetry]
name = "chatgpt-on-wechat"
version = "0.0.1"
description = "WeChat Bot with Chatgpt"
authors = ["Michael Huang <hkx@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[experimental]
new-installer = false
